# Birli

./: Cargo.toml  Makefile.toml  bindings.rs  build.rs  wrapped_aoflagger.hpp
.github/workflows/: bench.yml  coverage.yml  cross_test.yml  docker_test.yml  linux_test.yml  macos_test.yml
benches/: bench.rs
include/: cxx_aoflagger.h
src/: cli.rs  cxx_aoflagger.cc  cxx_aoflagger.rs  flags.rs  glue.cc  glue.h  glue.rs  lib.rs  main.rs
