[package]
name = "birli"
version = "0.1.0"
authors = ["Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>"]
edition = "2018"
description = "Common preprocessing tasks for the Murchison Widefield Array Epoch of Reionization pipeline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mwalib = { git = "https://github.com/MWATelescope/mwalib" }
clap = "2.33.3"
# tempfile = "3"
# cxx = "1.0"
libc = "0.2.86"

[dev-dependencies]
assert_cli = "0.6.1"
rustfmt = "0.10.0"

[build-dependencies]
bindgen = "0.57.0"
# pkg-config = "0.3.19"
# cxx-build = "1.0"
